--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -24,18 +24,35 @@
                 <h3>States</h3>
                 <h4>Lorem ipsum dolor sit</h4>
                 <ul class="popover">
-                    <li><h2>oazkpzadk</h2></li>
-                    <li>oazkpzadk</li>
+                    <li>
+                        <h2>State 1</h2>
+                        <ul>
+                            <li>City 1</li>
+                            <li>City 2</li>
+                            <li>City 3</li>
+                        </ul>
+                        <h2>State 2</h2>
+                        <ul>
+                            <li>City 1</li>
+                            <li>City 2</li>
+                            <li>City 3</li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
             <div class="amenities">
                 <h3>Amenities</h3>
                 <h4>Lorem ipsum dolor sit</h4>
                 <ul class="popover">
-                    <li><h2>oazkpzadk</h2></li>
-                    <li>oazkpzadk</li>
+                    <li>
+                        <h2>State 2</h2>
+                        <ul>
+                            <li>City 1</li>
+                            <li>City 2</li>
+                            <li>City 3</li>
+                        </ul>
+                    </li>
                 </ul>
-
             </div>
 
         </section>
