--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -74,6 +74,12 @@
                         <p>Bathroom</p>
                     </div>
                 </div>
+                <div class="user"><p><b>Owner:</b   > zaodkazpod</p></div>
+                <div class="description">
+                    <p>
+                       jdzapozkdzpoakdzpoakzopdpozaidopzaidzapoidzpaipzdaiapozidpzaikzaopdjapozaopzjpojdopajpozajdzapjdpzajpzajpzajdpzjdjzaojdajdazojdazodjzaj
+                    </p>
+                </div>
             </article>
             <article>
                 <h2>Tiny house</h2>
@@ -81,8 +87,13 @@
                 <div class="information">
                     <div class="max_guest"><p>Guests</p></div>
                     <div class="number_rooms">
-                        <p>>Bedroom</p></div>
-                    <div class="number_bathrooms">Bathroom</div>
+                        <p>Bedroom</p></div>
+                    <div class="number_bathrooms"><p>Bathroom</p></div>
+                </div>
+                <div class="user"><p><b>Owner:</b   > zaodkazpod</p></div>
+                <div class="description">
+                    <p>jdzapozkdzpoakdzpoakzopdpozaidopzaidzapoidzpaipzdaiapozidpzaikzaopdjapozaopzjpojdopajpozajdzapjdpzajpzajpzajdpzjdjzaojdajdazojdazodjzaj
+                    </p>
                 </div>
             </article>
             <article>
@@ -92,7 +103,13 @@
                     <div class="max_guest"><p>Guests</p></div>
                     <div class="number_rooms">
                         <p>Bedroom</p></div>
-                    <div class="number_bathrooms">Bathroom</div>
+                    <div class="number_bathrooms"><p>Bathroom</p></div>
+                </div>
+                <div class="user"><p><b>Owner:</b   > zaodkazpod</p></div>
+                <div class="description">
+                    <p>
+                       jdzapozkdzpoakdzpoakzopdpozaidopzaidzapoidzpaipzdaiapozidpzaikzaopdjapozaopzjpojdopajpozajdzapjdpzajpzajpzajdpzjdjzaojdajdazojdazodjzaj
+                    </p>
                 </div>
             </article>
         </section>
